# master

./: .gitattributes  .gitignore  README.md  TODO  go.work  go.work.sum
behemoth/: .gitattributes  .gitignore  pubspec.yaml  woland
behemoth/android/app/: CMakeLists.txt  build.gradle
behemoth/android/app/src/debug/: AndroidManifest.xml
behemoth/android/app/src/main/: AndroidManifest.xml
behemoth/android/app/src/main/jniLibs/x86_64/: libwoland.h
behemoth/android/app/src/main/kotlin/com/example/caspian/: MainActivity.kt
behemoth/android/app/src/profile/: AndroidManifest.xml
behemoth/ios/: Dummy.m  woland.h
behemoth/lib/: app.dart  main.dart
behemoth/linux/: CMakeLists.txt  Makefile  cmake_install.cmake  libwoland.h  my_application.cc
behemoth/snap/: snapcraft.yaml_
behemoth/test/: widget_test.dart
behemoth/web/: index.html  manifest.json
behemoth/windows/: CMakeCache.txt  CMakeLists.txt
margarita/: Makefile  README.md  pubspec.yaml
margarita (copy)/: .gitignore
margarita (copy)/ios/: Dummy.m
margarita (copy)/lib/: margarita_app.dart
margarita (copy)/linux/: Makefile  cmake_install.cmake  my_application.cc
margarita (copy)/snap/: snapcraft.yaml
massolit/: F4.md  README.md  WHITEPAPER.md  bootstrap.go  exports.go
poland/: options.py  poland.py  sample.ipynb  setup.py  woland.py
snap/: snapcraft.yaml
woland/: ENCRYPTION.md  F4.md  Makefile  WHITEPAPER.html  WHITEPAPER.md  api.go  bootstrap.go  bootstrap_test.go  cfunc.c  cfunc.h  exports.go  exports.goold  go.mod  go.sum  libsafepool.h  module.modulemap  safepool  ut  woland.h
(+365 files in other folders)
